--- a/build.xml
+++ b/build.xml
@@ -403,15 +403,13 @@
 	</target>
 
 	<target name="common-compile" depends="tests-clean,prepare,deploy-eclipse">
-		<javac srcdir="${eclipse.proj.dir.common}/src" destdir="${dest.dir.classes}"
-			debug="true" debuglevel="lines,source">
+		<javac srcdir="${eclipse.proj.dir.common}/src" destdir="${dest.dir.classes}" debug="true" debuglevel="lines,source">
 			<classpath refid="common.lib.class.path" />
 		</javac>
 	</target>
 
 	<target name="tests-compile" depends="common-compile">
-		<javac srcdir="${eclipse.proj.dir.junit}/src" destdir="${dest.dir.classes}"
-			debug="true" debuglevel="lines,source">
+		<javac srcdir="${eclipse.proj.dir.junit}/src" destdir="${dest.dir.classes}" debug="true" debuglevel="lines,source">
 			<classpath refid="build.class.path" />
 			<classpath refid="junit.class.path" />
 		</javac>
@@ -424,7 +422,7 @@
 			<classpath refid="common.lib.class.path" />
 			<classpath refid="test.class.path" />
 
-			<formatter type="plain" />
+			<formatter type="brief" />
 
 			<test name="test.ualberta.med.biobank.AllTests" haltonfailure="no" outfile="result">
 				<formatter type="xml" />
@@ -438,6 +436,25 @@
 					<exclude name="**/AllTests.java" />
 				</fileset>
 			</batchtest-->
+		</junit>
+	</target>
+
+	<target name="test-brief" depends="tests-compile" description="executes test cases">
+		<junit showoutput="true" fork="true" failureproperty="tests.failed" errorproperty="tests.failed">
+			<classpath refid="junit.class.path" />
+			<classpath refid="application.config.class.path" />
+			<classpath refid="common.lib.class.path" />
+			<classpath refid="test.class.path" />
+			<formatter usefile="false" type="brief" />
+			<batchtest todir="testring">
+				<fileset dir="${eclipse.proj.dir.junit}/src">
+					<include name="**/Test*.java" />
+					<exclude name="**/TestCommon.java" />
+					<exclude name="**/TestDatabase.java" />
+					<exclude name="**/AllTests.java" />
+				</fileset>
+			</batchtest>
+			<!-- <formatter type="xml"/> If missing, only displays failed tests -->
 		</junit>
 	</target>
 
