1) Fix in top level build.xml, TestFunctionalities test no longer run. 2) Now SiteWrapper calls setSitePvAttrCollection when a PvAttr is deleted. 3) Added TestCommon.getNewInventoryId() returns a unique sample inventory id. 4) Commented out console output in TestContainer. 5) Test TestContainerType.testIsUsedByContainers() works. 6) Added TestStudy.testRemoveStudyPvAttr(). 7) Added test.ualberta.med.biobank.Utils.getRandomString(). Now has option to specify min length. 8) Bug fixes in ContactHelper. 9) SampleHelper.newSample() genrates samples with unique inventory ids.

--- a/build.xml
+++ b/build.xml
@@ -430,7 +430,7 @@
 					<include name="**/Test*.java" />
 					<exclude name="**/TestCommon.java" />
 					<exclude name="**/TestDatabase.java" />
-                    <exclude name="**/TestFuntionalities.java" />
+                    <exclude name="**/TestFunctionalities.java" />
 					<exclude name="**/AllTests.java" />
 				</fileset>
 				<formatter type="xml" />
