changes to support the select scanner menu item.

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -649,6 +649,12 @@
                id="edu.ualberta.med.biobank.menu.configuration"
                label="Configuration">
             <command
+                  commandId="edu.ualberta.med.scannerconfig.commands.selectsource"
+                  icon="icons/selectScanner.png"
+                  label="Select Scanner"
+                  style="push">
+            </command>
+            <command
                   commandId="org.eclipse.ui.window.preferences"
                   id="edu.ualberta.med.biobank.menu.preferences"
                   label="Preferences"
