correct error on CabinetLinkAssignForm + add throw exception for ContainerWrapper.getSample (#260) + remove ContainerWrapper.getChildWithLabel() (#256)

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -8,6 +8,7 @@ bin.includes = META-INF/,\
                lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar,\
                plugin.xml,\
                .,\
-               plugin_customization.ini
+               plugin_customization.ini,\
+               lib/jasperreports-3.7.0.jar
 output.conf/ = bin/
 Bundle-NativeCode: /scanlib.dll
