--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -8,7 +8,6 @@ bin.includes = META-INF/,\
                lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar,\
                plugin.xml,\
                .,\
-               plugin_customization.ini,\
-               lib/jasperreports-3.7.0.jar
+               plugin_customization.ini
 output.conf/ = bin/
 Bundle-NativeCode: /scanlib.dll
