--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -159,7 +159,7 @@
          </commandParameter>
       </command>
       <command
-            id="edu.ualberta.med.biobank.commands.debug.initExamples"
+            id="edu.ualberta.med.biobank.commands.debug.cbsrConfiguration"
             name="Debug - Init Examples">
       </command>
       <command
@@ -362,8 +362,8 @@
          </enabledWhen>
       </handler>
       <handler
-            class="edu.ualberta.med.biobank.handlers.InitExamplesHandler"
-            commandId="edu.ualberta.med.biobank.commands.debug.initExamples">
+            class="edu.ualberta.med.biobank.handlers.CbsrConfigurationHandler"
+            commandId="edu.ualberta.med.biobank.commands.debug.cbsrConfiguration">
          <activeWhen>
             <reference
                   definitionId="biobank2.loggedIn">
@@ -659,8 +659,8 @@
                </reference>
             </visibleWhen>
             <command
-                  commandId="edu.ualberta.med.biobank.commands.debug.initExamples"
-                  id="edu.ualberta.med.biobank.menu.debug.initExamples"
+                  commandId="edu.ualberta.med.biobank.commands.debug.cbsrConfiguration"
+                  id="edu.ualberta.med.biobank.menu.debug.cbsrConfiguration"
                   label="Init Examples"
                   style="push">
             </command>
