--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -661,7 +661,7 @@
             <command
                   commandId="edu.ualberta.med.biobank.commands.debug.cbsrConfiguration"
                   id="edu.ualberta.med.biobank.menu.debug.cbsrConfiguration"
-                  label="Init Examples"
+                  label="Create CBSR Configuration"
                   style="push">
             </command>
          </menu>
