--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -3,15 +3,11 @@ output.. = bin/
 bin.includes = META-INF/,\
                icons/,\
                .,\
-               lib/,\
-               lib/org.eclipse.nebula.cwt_0.9.0.HEAD.jar,\
-               lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar,\
                plugin.xml,\
                .,\
-               lib/jasperreports-3.7.0.jar,\
-               lib/commons-beanutils-1.8.0.jar,\
-               lib/commons-digester-1.7.jar,\
-               lib/commons-lang-2.4.jar,\
-               lib/iText-2.1.0.jar
+               splash.bmp,\
+               plugin_customization.ini,\
+               lib/,\
+               .options
 output.conf/ = bin/
 Bundle-NativeCode: /scanlib.dll
