--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,33 @@
+*.jasper
+backup/
 biobank_jars.tar.bz2
-caCORE_SDK_411.tar.gz
 caCORE_SDK
-jars/
-CLM_LLT_4_0_Release.zip
-CLM_LLT_4_0_Release/
-CSM_API_rel_401.zip
-CSM_API_rel_401/
-CSM_UPT_4_0_Release.zip
-CSM_UPT_4_0_Release/
-model/*.png
-model/biobank2.uml~
+caCORE_SDK_411.tar.gz
 eclipse_ws/.metadata
-eclipse_ws/biobank2/bin
-eclipse_ws/biobank2/log
-eclipse_ws/biobank2/src/edu/ualberta/med/biobank/test
-runtime-biobank2.biobank2
-schema/schema-export.sql
 eclipse_ws/biobank.common/bin
+eclipse_ws/biobank.common/lib/*
 eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/test
 eclipse_ws/biobank2.importer/bin
-eclipse_ws/biobank2.tests/bin
-eclipse_ws/biobank2/lib/*.jar
 eclipse_ws/biobank2.importer/conf
-eclipse_ws/biobank2.tests/conf
-eclipse_ws/biobank.common/lib/*
 eclipse_ws/biobank2.importer/lib/*
+eclipse_ws/biobank2.tests/bin
+eclipse_ws/biobank2.tests/build
+eclipse_ws/biobank2.tests/conf
 eclipse_ws/biobank2.tests/lib/*
-eclipse_ws/biobank2/conf
-eclipse_ws/biobank2/scanlib.*
 eclipse_ws/biobank2/*.bmp
+eclipse_ws/biobank2/bin
+eclipse_ws/biobank2/conf
+eclipse_ws/biobank2/lib/*.jar
+eclipse_ws/biobank2/log
+eclipse_ws/biobank2/scanlib.*
+eclipse_ws/biobank2/src/edu/ualberta/med/biobank/test
+jars/
+log/
+model/*.png
+model/biobank2.uml~
 runtime-BioSampleScan.BioSampleScan/
 runtime-BioSampleScan.product1/
+runtime-biobank2.biobank2
 runtime-biobank2.product/
 runtime-biobank2.product1/
-backup/
-eclipse_ws/biobank2.tests/build
-*.jasper
-
+schema/schema-export.sql
