add about.mappings + solve study form problem with pvInfo (#277)

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -8,6 +8,7 @@ bin.includes = META-INF/,\
                splash.bmp,\
                plugin_customization.ini,\
                lib/,\
-               .options
+               .options,\
+               about.mappings
 output.conf/ = bin/
 Bundle-NativeCode: /scanlib.dll
